--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
     "helmet": "^7.0.0",
-    "html-pdf": "^3.0.1",
     "jquery": "^3.7.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.2.0",
@@ -40,6 +39,7 @@
     "nodemon": "^3.0.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
+    "puppeteer": "^21.5.0",
     "razorpay": "^2.9.2",
     "session": "^0.1.0",
     "sharp": "^0.32.6",
