--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cloudinary-core": "^2.13.0",
     "connect-ensure-login": "^0.1.1",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^5.1.0",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.3.1",
     "easyinvoice": "^3.0.23",
